--- a/02-bases/src/app/heroes/hero/hero.component.html
+++ b/02-bases/src/app/heroes/hero/hero.component.html
@@ -8,16 +8,16 @@
   <dd> {{ age }} </dd>
 
   <td>Metodo:</td>
-  <dd>algun metodo</dd>
+  <dd> {{ getHeroDescription() }} </dd>
 
   <td>Capitalizado:</td>
   <dd> {{ capitalizeName }} </dd>
 </dl>
 
-<button class="btn btn-primary mx-2">
+<button class="btn btn-primary mx-2" (click)="changeHero()">
   Cambiar nombre
 </button>
 
-<button class="btn btn-primary">
+<button class="btn btn-primary" (click)="changeAge()">
   Cambiar edad
 </button>
